<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".AddCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        tools:ignore="HardcodedText, Autofill, TextFields">

        <TextView
            android:id="@+id/add_card_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="ADD NEW CARD"
            android:textColor="@color/info_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/card_name_edit_text"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rounded_all_6_darker"
            android:hint="@string/card_name_hint"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="@color/info_text"
            android:textSize="16sp"
            android:theme="@style/EditTextTheme"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/card_number_edit_text"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rounded_all_6_darker"
            android:hint="@string/card_number_hint"
            android:inputType="number"
            android:padding="12dp"
            android:textColorHint="@color/info_text"
            android:textSize="16sp"
            android:theme="@style/EditTextTheme"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/card_holder_name_edit_text"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rounded_all_6_darker"
            android:hint="@string/card_holder_hint"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="@color/info_text"
            android:textSize="16sp"
            android:theme="@style/EditTextTheme"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/expiration_date_edit_text"
                style="@style/CustomEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rounded_all_6_darker"
                android:hint="@string/card_exp_date_hint"
                android:inputType="number"
                android:padding="12dp"
                android:textColorHint="@color/info_text"
                android:textSize="14sp"
                android:theme="@style/EditTextTheme"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/cvv_edit_text"
                style="@style/CustomEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rounded_all_6_darker"
                android:hint="@string/card_cvv_hint"
                android:inputType="number"
                android:padding="12dp"
                android:textColorHint="@color/info_text"
                android:textSize="14sp"
                android:theme="@style/EditTextTheme"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/password_edit_text"
                style="@style/CustomEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rounded_all_6_darker"
                android:hint="@string/card_password_hint"
                android:inputType="numberPassword"
                android:padding="12dp"
                android:textColorHint="@color/info_text"
                android:textSize="14sp"
                android:theme="@style/EditTextTheme"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/card_color_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_card_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@color/sec_background"
                android:text="@string/add_card_button_text"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/add_card_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@color/sec_background"
                android:text="@string/cancel"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
